Changes done to call the methods during service startup