@@ -1,131 +1,203 @@
 package com.citi.intelli.diff;
 
+import com.citi.intelli.diff.analyzer.GitRepoLister;
+import com.citi.intelli.diff.analyzer.TemporaryCacheGitFetcher;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockedStatic;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.verifyStatic;
 
+@ExtendWith(MockitoExtension.class)
 class TemporaryCacheGitFetcherTest {
 
-    // JUnit 5 annotation to create a temporary directory for tests
-    @TempDir
-    Path tempDir;
+    @Mock
+    private GitRepoLister gitRepoList;
 
-    private static final String TEST_REPO_URL = "https://github.com/test/repo.git";
-    private static final String FQCN_FILE1 = "com.app.util.Helper";
-    private static final String FQCN_FILE2 = "com.app.service.MyService";
-    private static final String RAW_CONTENT_1 = "package com.app.util; public class Helper {}";
-    private static final String RAW_CONTENT_2 = "package com.app.service; public class MyService {}";
+    @InjectMocks
+    private TemporaryCacheGitFetcher gitFetcher;
 
-    // Mock the class under test to override the complex fetch method
-    private TemporaryCacheGitFetcher fetcherSpy;
+    // Use a MockedStatic to control the behavior of the static method
+    private MockedStatic<TemporaryCacheGitFetcher> mockedStatic;
+
+    // Path to simulate the root directory of the temporary checkout
+    private Path tempSourceCodeDir;
+
+    // Constants for testing
+    private static final String MOCK_REPO_URL = "https://github.com/test/repo1.git";
+    private static final String MOCK_BRANCH = "master";
+    private static final String MOCK_JAVA_CONTENT = "package com.example;\npublic class TestClass {}";
+    private static final String MOCK_JAVA_FILENAME = "TestClass.java";
+    private static final String EXPECTED_FQCN = "com.example.TestClass";
+
+    // The main method under test is @PostConstruct, so we call it explicitly.
 
     @BeforeEach
-    void setUp() throws Exception {
-        // Create a spy to mock the results of the method that interacts with JGit
-        fetcherSpy = Mockito.spy(new TemporaryCacheGitFetcher());
+    void setUp() throws IOException {
+        // Create a temporary directory structure to simulate a successful Git checkout
+        tempSourceCodeDir = Files.createTempDirectory("test-checkout");
 
-        // Setup the mock file structure
-        File mockWorkingDir = createMockWorkingRepository(tempDir.toFile());
+        // 1. Create the necessary Java source path: src/main/java/com/example/
+        Path javaDir = tempSourceCodeDir.resolve("src/main/java/com/example");
+        Files.createDirectories(javaDir);
 
-        // Mock the fetchAndCheckoutSourceCode to return the controlled mock directory
-        Mockito.doReturn(mockWorkingDir)
-                .when(fetcherSpy)
-                .fetchAndCheckoutSourceCode(Mockito.eq(TEST_REPO_URL), Mockito.anyString());
+        // 2. Create the mock Java file
+        Path javaFile = javaDir.resolve(MOCK_JAVA_FILENAME);
+        Files.write(javaFile, MOCK_JAVA_CONTENT.getBytes());
 
-        // Mock cleanupDirectory to prevent errors during cleanup calls after mocking
-        Mockito.doNothing().when(fetcherSpy).cleanupDirectory(Mockito.any());
+        // Mock the static method to return our controlled temporary directory
+        mockedStatic = mockStatic(TemporaryCacheGitFetcher.class, CALLS_REAL_METHODS);
+        mockedStatic.when(() -> TemporaryCacheGitFetcher.fetchAndCheckoutSourceCode(anyString(), anyString()))
+                .thenReturn(tempSourceCodeDir.toFile());
+
+        // Mock the cleanupDirectory to avoid actual filesystem issues during test
+        mockedStatic.when(() -> TemporaryCacheGitFetcher.cleanupDirectory(any(File.class))).then(invocation -> {
+            // Do nothing, but ensure the method is called
+            return null;
+        });
     }
 
     @AfterEach
     void tearDown() {
-        // Since cleanup is mocked, we need to ensure the temporary files are cleared by JUnit's @TempDir
-    }
+        // Close the mocked static resource
+        mockedStatic.close();
 
-    /**
-     * Creates a mock directory structure that resembles a successful JGit checkout.
-     * @param rootDir The temporary root directory.
-     * @return The mock working directory (the "sourceCodeDir").
-     */
-    private File createMockWorkingRepository(File rootDir) throws IOException {
-        Path sourceCodeDir = rootDir.toPath().resolve("mock-source-code");
-        Files.createDirectories(sourceCodeDir.resolve("src/main/java"));
-
-        // Create package directories
-        Path pkgPath1 = sourceCodeDir.resolve("src/main/java/com/app/util");
-        Path pkgPath2 = sourceCodeDir.resolve("src/main/java/com/app/service");
-        Files.createDirectories(pkgPath1);
-        Files.createDirectories(pkgPath2);
-
-        // Create mock Java files
-        Files.write(pkgPath1.resolve("Helper.java"), RAW_CONTENT_1.getBytes(StandardCharsets.UTF_8));
-        Files.write(pkgPath2.resolve("MyService.java"), RAW_CONTENT_2.getBytes(StandardCharsets.UTF_8));
-
-        return sourceCodeDir.toFile();
+        // Ensure the temporary directory is cleaned up after the test run
+        try {
+            if (tempSourceCodeDir != null && Files.exists(tempSourceCodeDir)) {
+                // Use the real cleanup method for safety after the mock is closed
+                Files.walk(tempSourceCodeDir)
+                        .map(Path::toFile)
+                        .sorted((o1, o2) -> -o1.compareTo(o2))
+                        .forEach(File::delete);
+            }
+        } catch (IOException e) {
+            System.err.println("Failed to clean up test directory: " + e.getMessage());
+        }
     }
 
     @Test
-    void accessRemoteRepoAndGetTheFileContents_ShouldProcessFilesAndReturnMetadataMap() throws Exception {
-        // Arrange
-        List<String> repoList = new ArrayList<>(Arrays.asList(TEST_REPO_URL));
+    void testAccessRemoteRepoAndGetTheFileContents_Success() {
+        // ARRANGE
+        List<String> mockRepoList = Arrays.asList(MOCK_REPO_URL);
+        when(gitRepoList.getPublicRepoList()).thenReturn(mockRepoList);
 
-        // Act
-        // Call the spied method which uses the mocked fetch method
-        Map<String, Map<String, String>> result = fetcherSpy.accessRemoteRepoAndGetTheFileContents(repoList);
+        // ACT
+        // Call the method that is annotated with @PostConstruct
+        gitFetcher.accessRemoteRepoAndGetTheFileContents();
 
-        // Assert
-        // 1. Verify that the map is not empty and contains the expected entry (due to the bug in the original code)
-        assertFalse(result.isEmpty(), "Result map should not be empty.");
-        assertTrue(result.containsKey(TEST_REPO_URL), "Result map must be keyed by repoUrl.");
+        Map<String, Map<String, String>> result = gitFetcher.getRepoMetaData();
 
-        // 2. Due to the bug in the original implementation (overwriting the classMetadataMap with repoUrl as key),
-        // we only assert on the last processed class's metadata.
-        Map<String, String> attributes = result.get(TEST_REPO_URL);
-        assertNotNull(attributes, "Attributes map should not be null.");
+        // ASSERT
+        // 1. Verify the static method was called
+        verifyStatic(TemporaryCacheGitFetcher.class, times(1));
+        try {
+            TemporaryCacheGitFetcher.fetchAndCheckoutSourceCode(MOCK_REPO_URL, MOCK_BRANCH);
+        } catch (Exception e) {
+            fail("fetchAndCheckoutSourceCode should not throw exception here.");
+        }
 
-        // 3. Verify the final (overwritten) entry's data (which is MyService's data)
-        // NOTE: The original code uses the WRONG key for raw content, it uses the bugged package name:
-        String buggedKey = "com.app.service.MyService"; // Calculated as: package + "." + className
-        assertTrue(attributes.containsKey(buggedKey), "Attributes should contain the raw content keyed by the bugged FQCN.");
-        assertEquals(RAW_CONTENT_2, attributes.get(buggedKey), "Raw content should match the second file's content.");
+        // 2. Verify the result map structure
+        assertNotNull(result, "The metadata map should not be null.");
+        assertTrue(result.containsKey(MOCK_REPO_URL), "Result should contain the mock repository URL.");
 
-        // 4. Verify that the correct cleanup was attempted
-        Mockito.verify(fetcherSpy, Mockito.times(1)).cleanupDirectory(Mockito.any(File.class));
+        Map<String, String> classMap = result.get(MOCK_REPO_URL);
+        assertNotNull(classMap, "Class map for the repo should not be null.");
+
+        // 3. Verify the class content
+        // In your current implementation, the key in the inner map is the FQCN,
+        // and the value is the raw content.
+        assertTrue(classMap.containsKey(EXPECTED_FQCN),
+                "Class map should contain the expected FQCN key: " + EXPECTED_FQCN);
+        assertEquals(MOCK_JAVA_CONTENT, classMap.get(EXPECTED_FQCN),
+                "The stored content should match the mock Java content.");
+
+        // 4. Verify cleanup was called
+        verifyStatic(TemporaryCacheGitFetcher.class, times(1));
+        TemporaryCacheGitFetcher.cleanupDirectory(any(File.class));
     }
 
     @Test
-    void accessRemoteRepoAndGetTheFileContents_ShouldHandleMultipleRepos(
-    ) throws Exception {
-        // Arrange
-        String TEST_REPO_URL_2 = "https://github.com/another/repo.git";
-        List<String> repoList = new ArrayList<>(Arrays.asList(TEST_REPO_URL, TEST_REPO_URL_2));
+    void testAccessRemoteRepoAndGetTheFileContents_EmptyRepoList() {
+        // ARRANGE
+        when(gitRepoList.getPublicRepoList()).thenReturn(List.of());
 
-        // Mock the fetch method for the second URL as well
-        File mockWorkingDir2 = createMockWorkingRepository(tempDir.toFile().toPath().resolve("mock-2").toFile());
-        Mockito.doReturn(mockWorkingDir2)
-                .when(fetcherSpy)
-                .fetchAndCheckoutSourceCode(Mockito.eq(TEST_REPO_URL_2), Mockito.anyString());
+        // ACT
+        gitFetcher.accessRemoteRepoAndGetTheFileContents();
 
-        // Act
-        Map<String, Map<String, String>> result = fetcherSpy.accessRemoteRepoAndGetTheFileContents(repoList);
+        Map<String, Map<String, String>> result = gitFetcher.getRepoMetaData();
 
-        assertEquals(1, result.size(), "Due to the logic error, only the last processed repo's data should remain.");
+        // ASSERT
+        assertNotNull(result);
+        assertTrue(result.isEmpty(), "The metadata map should be empty for an empty repo list.");
 
-        // Verify only the last URL is the key
-        assertTrue(result.containsKey(TEST_REPO_URL_2), "The map should contain data for the last repo processed.");
-        assertFalse(result.containsKey(TEST_REPO_URL), "The first repo's data was overwritten due to incorrect map key.");
+        // Verify that fetch and cleanup were never called
+        verifyStatic(TemporaryCacheGitFetcher.class, never());
+        try {
+            TemporaryCacheGitFetcher.fetchAndCheckoutSourceCode(anyString(), anyString());
+        } catch (Exception e) {
+            // Do nothing
+        }
+    }
+
+    @Test
+    void testAccessRemoteRepoAndGetTheFileContents_FetchFails() {
+        // ARRANGE
+        List<String> mockRepoList = Arrays.asList(MOCK_REPO_URL);
+        when(gitRepoList.getPublicRepoList()).thenReturn(mockRepoList);
+
+        // Re-mock the static method to throw an exception
+        mockedStatic.close(); // Close previous mock
+        mockedStatic = mockStatic(TemporaryCacheGitFetcher.class, CALLS_REAL_METHODS);
+        try {
+            mockedStatic.when(() -> TemporaryCacheGitFetcher.fetchAndCheckoutSourceCode(anyString(), anyString()))
+                    .thenThrow(new RuntimeException("Simulated Git Error"));
+        } catch (Exception e) {
+            // Should not happen as we catch the exception in the method
+        }
+
+        // ACT
+        gitFetcher.accessRemoteRepoAndGetTheFileContents();
+
+        Map<String, Map<String, String>> result = gitFetcher.getRepoMetaData();
+
+        // ASSERT
+        assertNotNull(result);
+        assertTrue(result.isEmpty(), "The metadata map should be empty if fetching fails.");
+
+        // Verify that cleanup was still attempted (although the directory might be null)
+        verifyStatic(TemporaryCacheGitFetcher.class, times(1));
+        TemporaryCacheGitFetcher.cleanupDirectory(isNull()); // Cleanup is called with null in the finally block
+    }
+
+    // Test the public getter method
+    @Test
+    void testGetRepoMetaData() {
+        // ARRANGE
+        Map<String, Map<String, String>> expectedMap = Map.of("test-url", Map.of("class", "content"));
+        // Use reflection to directly set the private field as if @PostConstruct ran
+        ReflectionTestUtils.setField(gitFetcher, "classMetadataMap", expectedMap);
+
+        // ACT
+        Map<String, Map<String, String>> result = gitFetcher.getRepoMetaData();
+
+        // ASSERT
+        assertEquals(expectedMap, result, "The getter should return the stored map.");
     }
 }
